# cpp_user_generator

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
impl/: CMakeLists.txt  random_user_generator.h
impl/src/: random_user_generator.cpp
impl/test/: test_random_user_generator.cpp
interface/: user_generator.h  user_generator_io.h  user_ostream.h
utils/: CMakeLists.txt  random.h  translit.h
utils/src/: random.cpp  translit.cpp
utils/test/: random_test.cpp  translit_test.cpp
